--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 .DS_Store
-.vagrant/
+.vagrant
+Berksfile.lock
+*~
+*#
+.#*
+\#*#
+.*.sw[a-z]
+*.un~
+/cookbooks
+
+# Bundler
+Gemfile.lock
+bin/*
+.bundle/*
+
