--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -24,7 +24,8 @@ platforms:
   - name: ubuntu/xenial64
     driver_config:
       network:
-      - ["forwarded_port", {guest: 80, host: 8000}]
+      - ["forwarded_port", {guest: 80, host: 8000, auto_correct: true}]
+      - ["forwarded_port", {guest: 8080, host: 8080, auto_correct: true}]
 
 suites:
   - name: default
