--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -2,11 +2,11 @@
   # Use the runlist, attributes and other settings defined in node.json to
   # ensure .kitchen.yml runs against the exact same configuration as Vagrantfile.
   require 'json'
-  if !File.exist?('node.json')
-    puts 'Aborting .kitchen.yml: required node.json does not exist' unless File.exist?('node.json')
+  if !File.exist?('install_cypress_cvu.json')
+    puts 'Aborting .kitchen.yml: required install_cypress_cvu.json does not exist' unless File.exist?('install_cypress_cvu.json')
     exit
   else
-    node = JSON.parse(File.read('node.json'))
+    node = JSON.parse(File.read('install_cypress_cvu.json'))
   end
 %>
 ---
