--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,7 +3,7 @@
   # ensure .kitchen.yml runs against the exact same configuration as Vagrantfile.
   require 'json'
   if !File.exist?('install_cypress_cvu.json')
-    puts 'Aborting .kitchen.yml: required install_cypress_cvu.json does not exist' unless File.exist?('install_cypress_cvu.json')
+    puts 'Aborting .kitchen.yml: required install_cypress_cvu.json does not exist'
     exit
   else
     node = JSON.parse(File.read('install_cypress_cvu.json'))
@@ -12,9 +12,9 @@
 ---
 driver:
   name: vagrant
-  require_chef_omnibus: 12.21
+  require_chef_omnibus: 13.6.4
   customize:
-    memory: 4096
+    memory: 6144
     cpus: 4
 
 
