--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,7 +12,7 @@
 ---
 driver:
   name: vagrant
-  require_chef_omnibus: 13.6.4
+  product_version: 13.8
   customize:
     memory: 6144
     cpus: 4
