--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -25,7 +25,7 @@ verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu/xenial64
+  - name: ubuntu/bionic64
     driver_config:
       network:
       - ["forwarded_port", {guest: 80, host: 8000, auto_correct: true}]
