Depth and cursor mongo cofig changes

--- a/files/default/mongod.conf
+++ b/files/default/mongod.conf
@@ -25,4 +25,5 @@ net:
 
 # higher max bson depth is required for cypress + bonnie on mongo 3.4.4+
 setParameter:
-  maxBSONDepth: 500
+  maxBSONDepth: 1000
+  cursorTimeoutMillis: 3600000
