--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
       run: |
         bundle install
         wget https://packages.chef.io/files/stable/chefdk/3.9.0/ubuntu/16.04/chefdk_3.9.0-1_amd64.deb
-        dpkg -i chefdk_3.9.0-1_amd64.deb
+        dpkg-deb -i chefdk_3.9.0-1_amd64.deb
         cd cypress-recipe
         berks vendor cypress/contrib/cookbooks/
         cd ../cypress
