--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,11 +15,14 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with: 
+        path: 'cypress-recipe'
 
-    - name: Checkout recipe
+    - name: Checkout cypress
       uses: actions/checkout@v2
       with: 
         repository: 'projectcypress/cypress'
+        path: 'cypress'
 
     - name: Set up Ruby
       uses: ruby/setup-ruby@b12138f02d7d0c4d36f463e0885dc47ec25a52fe
@@ -29,8 +32,6 @@ jobs:
     - name: Provision Cookbook
       run: |
         bundle install
-        wget https://packages.chef.io/files/stable/chefdk/3.9.0/ubuntu/16.04/chefdk_3.9.0-1_amd64.deb
-        dpkg-deb -i chefdk_3.9.0-1_amd64.deb
         cd cypress-recipe
         berks vendor cypress/contrib/cookbooks/
         cd ../cypress
