--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,5 +39,5 @@ jobs:
       uses: hashicorp/packer-github-actions@master
       with:
         command: build
-        arguments: "-var-file=aws_env.json -only=cypress.amazonaws cypress.json"
-        target: cypress/contrib
+        arguments: "-var-file=aws_env.json -only=cypress.amazonaws"
+        target: cypress/contrib/cypress.json
