--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         cd cypress-recipe
         ls
         bundle install
-        berks vendor cypress/contrib/cookbooks/
+        berks vendor ../cypress/contrib/cookbooks/
         cd ../cypress/contrib
         ls
     - name: Build AMI
