--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,16 +31,13 @@ jobs:
 
     - name: Provision Cookbook
       run: |
-        ls
         cd cypress-recipe
-        ls
         bundle install
         berks vendor ../cypress/contrib/cookbooks/
         cd ../cypress/contrib
-        ls
     - name: Build AMI
       uses: hashicorp/packer-github-actions@master
       with:
         command: build
         arguments: "-var 'aws_access_key=${{secrets.AWS_ACCESS_KEY}}' -var 'aws_secret_key=${{secrets.AWS_SECRET_KEY}}' -var 'vpc_id=${{secrets.VPC_ID}}' -var 'subnet_id=${{secrets.SUBNET_ID}}' -only=cypress.amazonaws"
-        target: cypress/contrib/cypress.json
+        target: cypress.json
