--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,11 +33,10 @@ jobs:
       run: |
         cd cypress-recipe
         bundle install
-        berks vendor ../cypress/contrib/cookbooks/
-        cd ../cypress/contrib
+        berks vendor ../cookbooks/
     - name: Build AMI
       uses: hashicorp/packer-github-actions@master
       with:
         command: build
         arguments: "-var 'aws_access_key=${{secrets.AWS_ACCESS_KEY}}' -var 'aws_secret_key=${{secrets.AWS_SECRET_KEY}}' -var 'vpc_id=${{secrets.VPC_ID}}' -var 'subnet_id=${{secrets.SUBNET_ID}}' -only=cypress.amazonaws"
-        target: cypress.json
+        target: cypress/contrib/cypress.json
