--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,11 @@ jobs:
       fail-fast: false
 
     runs-on: ubuntu-latest
-
+    env:  
+        AWS_ACCESS_KEY: ${{secrets.AWS_ACCESS_KEY}}
+        AWS_SECRET_KEY: ${{secrets.AWS_SECRET_KEY}}
+        VPC_ID: ${{secrets.VPC_ID}}
+        SUBNET_ID: ${{secrets.SUBNET_ID}}
     steps:
     - name: Checkout
       uses: actions/checkout@v2
